--- a/guestBook03/pom.xml
+++ b/guestBook03/pom.xml
@@ -5,9 +5,9 @@
 		<artifactId>spring-practice</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>hellospring</artifactId>
+	<artifactId>guestBook03</artifactId>
 	<packaging>war</packaging>
-
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>
@@ -15,30 +15,44 @@
 		<maven.compiler.target>17</maven.compiler.target>
 		<org.springframewok-version>5.3.25</org.springframewok-version>
 	</properties>
-
-
+	
 	<dependencies>
 		<!-- spring context -->
 		<dependency>
-		    <groupId>org.springframework</groupId>
-		    <artifactId>spring-context</artifactId>
-		    <version>${org.springframewok-version}</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${org.springframewok-version}</version>
 		</dependency>
-
+	
 		<!-- spring web -->
 		<dependency>
-		    <groupId>org.springframework</groupId>
-		    <artifactId>spring-web</artifactId>
-		    <version>${org.springframewok-version}</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${org.springframewok-version}</version>
 		</dependency>
-
+	
 		<!-- spring mvc -->
 		<dependency>
-		    <groupId>org.springframework</groupId>
-		    <artifactId>spring-webmvc</artifactId>
-		    <version>${org.springframewok-version}</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${org.springframewok-version}</version>
 		</dependency>
-		
+	
+		<!-- jstl -->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+	
+		<!-- MariaDB JDBC Driver -->
+		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>3.0.8</version>
+		</dependency>
+	
 		<!-- servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -53,9 +67,8 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-	
 	<build>
-		<finalName>hellospring</finalName>
+		<finalName>guestBook03</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -73,5 +86,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	
 </project>
