--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   	<module>logex</module>
   	<module>aoptest</module>
   	<module>fileupload</module>
+  	<module>container</module>
   </modules>
   
   <build>
